typescript/file_analyzer/tests/visualize/types/tuple/strictTupleLength/1.ts
var t1: [number];
var t2: [number, number];

var t1 = t2; // error
var t2 = t1; // error

export { }